--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # Redis 클러스터 설정
 # 쉼표로 구분하여 여러 노드를 입력할 수 있습니다. 예: 127.0.0.1:6379,127.0.0.1:6380
-spring.data.redis.cluster.nodes=52.78.206.211:6379,13.125.220.75:6379,3.37.89.6:6379
+spring.data.redis.cluster.nodes=
 # 리다이렉트 횟수 설정
 spring.data.redis.cluster.max-redirects=3
 # 비밀번호가 없는 경우 비워둡니다.
